--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,23 @@
   "version": 2,
   "builds": [
     {
-      "src": "public/index.php",
-      "use": "vercel-php"
+      "src": "index.php",
+      "use": "@vercel/php"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/public/index.php"
+      "dest": "/index.php"
     }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "production",
+    "APP_KEY": "your-app-key",
+    "DB_HOST": "your-db-host",
+    "DB_PORT": "3306",
+    "DB_USERNAME": "your-db-username",
+    "DB_PASSWORD": "your-db-password",
+    "DB_DATABASE": "your-db-name"
+  }
 }
